fixed image display being too large

--- a/api/frontend/src/app/components/upload-image/upload-image.component.css
+++ b/api/frontend/src/app/components/upload-image/upload-image.component.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 70vh;
-  width: 60vw;
+  height: 80vh;
+  width: 70vw;
 }
 
 .upload-button {
@@ -48,7 +48,7 @@
 
 
 img {
-  max-width: auto;
-  height: auto;
+  max-width: 50vh;
+  height: 50vh;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
